--- a/styles/styles.css
+++ b/styles/styles.css
@@ -280,15 +280,15 @@ nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 100px;
-  font-family: "Archivo Black";
-  color: #232323;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  height: 100px;
+  font-family: "Archivo Black";
+  color: #232323;
   padding: 0 20px;
   background-color: #232323;
 }
@@ -303,6 +303,12 @@ nav img {
   display: flex;
 }
 
+@media (max-width: 480px) {
+  #titleContainer {
+    margin-top: -72px;
+    margin-bottom: -12px;
+  }
+}
 .wrapper {
   width: 100%;
   max-width: 1920px;
